# TicTacToe

./: .gitignore  AlignType.h  CMakeLists.txt  main.cpp
constant/: Constants.h
controller/: BoardController.cpp  BoardController.h
model/: BoardData.cpp  BoardData.h
util/: OSDependent.cpp  headers.h
view/: BoardView.cpp  BoardView.h
